<resources>
    <string name="app_name">TriviaGame</string>
    <string name="action_settings">Settings</string>
    <string name="trivia_game">Trivia Game</string>
    <string name="records">Records</string>
    <string name="random_question">Random Question</string>
    <string name="achievement">Achievement</string>
    <string name="settings">Settings</string>
    <string name="a_description">A. Description</string>
    <string name="b_description">B. Description</string>
    <string name="c_description">C. Description</string>
    <string name="d_description">D. Description</string>
    <string name="question_area">Question area</string>
    <string name="time_display">Time Display</string>
    <string name="_00_00">00:00</string>
</resources>
