<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_main"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trivia_game"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061"
        android:id="@+id/textView"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:fontFamily="@font/just_me_again_down_here" android:textSize="85sp" android:lineSpacingExtra="12sp"
        android:textColor="@android:color/background_light" android:textStyle="bold|italic"/>

    <Button android:layout_width="250dp" android:layout_height="125dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="10dp" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.324"
        android:background="@drawable/icon"
        android:id="@+id/PlayButton"/>
    <Button
        android:text="@string/records"
        android:layout_width="150dp"
        android:layout_height="125dp"
        android:id="@+id/buttonRecord" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.786" android:background="@drawable/fourbutton"
        android:textColor="@android:color/background_light" android:fontFamily="@font/aldrich"
        android:textStyle="bold"/>
    <Button
        android:text="@string/random_question"
        android:layout_width="150dp"
        android:layout_height="125dp"
        android:id="@+id/buttonRandom"
        android:layout_marginStart="40dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="40dp"
        app:layout_constraintHorizontal_bias="0.086" android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.786"
        android:background="@drawable/fourbutton" android:textColor="@android:color/background_light"
        android:fontFamily="@font/aldrich" android:textStyle="bold"/>
    <Button
        android:text="@string/achievement"
        android:layout_width="150dp"
        android:layout_height="125dp"
        android:id="@+id/Achievements" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.963"
        android:background="@drawable/fourbutton" android:textColor="@android:color/background_light"
        android:fontFamily="@font/aldrich" android:textStyle="bold"/>
    <Button
        android:text="@string/settings"
        android:layout_width="150dp"
        android:layout_height="125dp"
        android:id="@+id/Settings"
        android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="40dp"
        android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.461" app:layout_constraintVertical_bias="0.962"
        android:background="@drawable/fourbutton" android:textColor="@android:color/background_light"
        android:fontFamily="@font/aldrich" android:textStyle="bold"/>
    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true" app:srcCompat="@android:drawable/btn_star_big_on"
        android:id="@+id/soundButton" android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="1.0" android:focusable="true"
        app:elevation="0dp" app:backgroundTint="@color/colorPrimary"/>

</android.support.constraint.ConstraintLayout>